--- a/app/src/main/res/layout/fragment_student_grade.xml
+++ b/app/src/main/res/layout/fragment_student_grade.xml
@@ -8,8 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="2dp"
-        android:background="#FAFAFA">
+        android:padding="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,46 +23,12 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_width="0dp"
-            android:text="Matéria"
+            android:text="Matérias"
             android:textStyle="bold"
             android:gravity="center"
             android:padding="8dp"
             android:textSize="16sp"
             android:textColor="#FFFFFF" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:text="Faltas"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:padding="8dp"
-            android:textSize="16sp"
-            android:textColor="#FFFFFF" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:text="Nota"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:padding="8dp"
-            android:textSize="16sp"
-            android:textColor="#FFFFFF" />
-
-        <TextView
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:text="Info"
-            android:textStyle="bold"
-            android:gravity="center"
-            android:padding="8dp"
-            android:textSize="16sp"
-            android:textColor="#FFFFFF" />
-
     </LinearLayout>
 
     <ListView
