--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="pink">#E00051</color>
     <color name="transparent">#00FFFFFF</color>
-    <color name="colorButtonSave">#34eb55</color>
+    <color name="colorButtonSave">#42f56f</color>
     <color name="colorButtonDelete">#eb3434</color>
+    <color name="colorButtonEdit">#4287f5</color>
+    <color name="colorButtonInfo">#a400e0</color>
 </resources>
