--- a/app/src/main/res/layout/fragment_professor_profile.xml
+++ b/app/src/main/res/layout/fragment_professor_profile.xml
@@ -12,6 +12,7 @@
         android:padding="20dp"
         android:orientation="vertical">
 
+        <!-- Profile Image -->
         <ImageView
             android:id="@+id/profileImage"
             android:layout_width="200dp"
@@ -21,6 +22,18 @@
             android:padding="10dp"
             android:paddingTop="30dp"
             android:src="@drawable/ic_profile_placeholder"/>
+
+        <!-- Name Section -->
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"
+            android:text="Nome"
+            android:textColor="@color/pink"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <!-- ID Section -->
         <LinearLayout
@@ -55,9 +68,6 @@
         </LinearLayout>
 
         <!-- Birth Date Section -->
-
-
-        <!-- Email Section -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -89,6 +99,7 @@
                 android:textSize="20sp" />
         </LinearLayout>
 
+        <!-- Email Section -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
