--- a/app/src/main/res/layout/fragment_student_profile.xml
+++ b/app/src/main/res/layout/fragment_student_profile.xml
@@ -22,6 +22,18 @@
             android:paddingTop="30dp"
             android:src="@drawable/ic_profile_placeholder"/>
 
+        <!-- Name Section -->
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingTop="10dp"
+            android:text="Nome"
+            android:textColor="@color/pink"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
         <!-- ID Section -->
         <LinearLayout
             android:layout_width="match_parent"
