--- a/app/src/main/res/layout/activity_coordinator.xml
+++ b/app/src/main/res/layout/activity_coordinator.xml
@@ -19,17 +19,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/white"
-        app:fabCradleMargin="10dp"
-        app:fabCradleRoundedCornerRadius="50dp">
+        android:background="@color/transparent"
+        app:fabCradleMargin="0dp"
+        app:fabCradleRoundedCornerRadius="0dp">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottomNavigationView"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="20dp"
             android:background="@android:color/transparent"
-            app:labelVisibilityMode="labeled"
+            app:labelVisibilityMode="selected"
             app:menu="@menu/coordinator_bottom_menu"/>
 
     </com.google.android.material.bottomappbar.BottomAppBar>
