--- a/app/src/main/res/layout/activity_professor.xml
+++ b/app/src/main/res/layout/activity_professor.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/bottomNavigationView"
             android:layout_marginEnd="20dp"
-            app:labelVisibilityMode="labeled"
+            app:labelVisibilityMode="selected"
             android:background="@android:color/transparent"
             app:menu="@menu/professor_bottom_menu"/>
 
