--- a/app/src/main/res/layout/activity_coordinator.xml
+++ b/app/src/main/res/layout/activity_coordinator.xml
@@ -19,18 +19,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:background="@color/transparent"
-        app:fabCradleMargin="0dp"
-        app:fabCradleRoundedCornerRadius="0dp">
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/transparent"
-            app:labelVisibilityMode="selected"
-            app:menu="@menu/coordinator_bottom_menu"/>
+        android:background="@color/transparent">
 
     </com.google.android.material.bottomappbar.BottomAppBar>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        app:labelVisibilityMode="selected"
+        app:layout_anchor="@+id/bottomAppBar"
+        app:layout_anchorGravity="center"
+        app:menu="@menu/coordinator_bottom_menu" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
