--- a/app/src/main/res/layout/activity_coordinator_students.xml
+++ b/app/src/main/res/layout/activity_coordinator_students.xml
@@ -5,6 +5,17 @@
     android:orientation="vertical"
     android:padding="16dp">
 
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Alunos"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:paddingBottom="8dp"
+        android:textColor="@color/pink" />
+
     <Spinner
         android:id="@+id/courseSpinner"
         android:layout_width="match_parent"
