--- a/app/src/main/res/layout/activity_edit_course.xml
+++ b/app/src/main/res/layout/activity_edit_course.xml
@@ -81,14 +81,16 @@
             android:layout_height="wrap_content"
             android:paddingTop="8dp"
             android:paddingBottom="8dp"
-            android:prompt="@string/subjects_prompt" />
+            android:prompt="@string/subjects_prompt"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/selectedSubjectsRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="200dp"
+            android:background="@color/light_black"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"/>
+            android:layout_marginBottom="16dp"
+            android:scrollbars="vertical"/>
 
 
         <Button
