--- a/app/src/main/res/menu/professor_bottom_menu.xml
+++ b/app/src/main/res/menu/professor_bottom_menu.xml
@@ -7,8 +7,8 @@
         android:icon="@drawable/home_24"/>
 
     <item
-        android:id="@+id/professor_courses"
-        android:title="Turmas"
+        android:id="@+id/professor_grades"
+        android:title="Notas"
         android:icon="@drawable/people_24"/>
 
     <item
