--- a/app/src/main/res/layout/fragment_student_home.xml
+++ b/app/src/main/res/layout/fragment_student_home.xml
@@ -26,7 +26,9 @@
             android:id="@+id/subjectSpinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="16dp" />
+            android:paddingBottom="16dp"
+
+            style="@style/SpinnerStyle" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rankingRecyclerView"
