--- a/app/src/main/res/layout/item_grade.xml
+++ b/app/src/main/res/layout/item_grade.xml
@@ -1,56 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:background="?attr/selectableItemBackground">
+    android:layout_margin="8dp"
+    app:cardCornerRadius="12dp">
 
-    <TextView
-        android:id="@+id/textViewSubject"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nome da Disciplina"
-        android:textStyle="bold"
-        android:textColor="#E00051"
-        android:textSize="18sp"
-        android:paddingStart="8dp"
-        android:paddingBottom="8dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textViewSubject"
-        android:orientation="vertical"
-        android:paddingStart="8dp">
+        android:padding="16dp">
 
         <TextView
-            android:id="@+id/textViewProfessor"
+            android:id="@+id/textViewSubject"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Professor:"
-            android:textColor="#757575"
-            android:textSize="16sp"
-            android:textStyle="bold"/>
-
-        <TextView
-            android:id="@+id/textViewAbsence"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Faltas:"
-            android:textColor="#757575"
-            android:textSize="16sp"
+            android:text="Nome da Disciplina"
             android:textStyle="bold"
-            android:layout_marginTop="4dp"/>
+            android:textColor="#FFFFFF"
+            android:textSize="18sp"
+            android:paddingStart="8dp"
+            android:paddingBottom="8dp"/>
 
-        <TextView
-            android:id="@+id/textViewGrade"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nota:"
-            android:textColor="#757575"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            android:layout_marginTop="4dp"/>
-    </LinearLayout>
+            android:layout_below="@id/textViewSubject"
+            android:orientation="vertical"
+            android:paddingStart="8dp">
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/textViewProfessor"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Professor:"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/textViewAbsence"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Faltas:"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="4dp"/>
+
+            <TextView
+                android:id="@+id/textViewGrade"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nota:"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="4dp"/>
+
+            <TextView
+                android:id="@+id/textViewSituation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Situação:"
+                android:textColor="#FFFFFF"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="4dp"/>
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
