--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,10 @@
     <color name="colorButtonDelete">#eb3434</color>
     <color name="colorButtonEdit">#4287f5</color>
     <color name="colorButtonInfo">#a400e0</color>
+    <color name="holo_blue_dark">#ff33b5e5</color>
+    <color name="holo_green_dark">#ff669900</color>
+    <color name="holo_orange_dark">#ffff8800</color>
+    <color name="holo_red_dark">#ffcc0000</color>
+    <color name="holo_purple_dark">#ff9933cc</color>
+    <color name="holo_yellow_dark">#ffffbb33</color>
 </resources>
